Prevention before possible crash when we are trying to get incorrect setting from VPN connection

BUG:324016